<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_full_screen"
    tools:context=".AnswerQuestionSixActivity">

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="32dp"
        android:background="@drawable/bg_round_red"
        android:contentDescription="@string/close_img_button"
        android:src="@drawable/close_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btn_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@drawable/bg_tv_orange"
        android:fontFamily="@font/goldman_bold"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/btn_text_show_answers"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="312dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/goldman_bold"
        android:text="@string/question_11_1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <LinearLayout
        android:id="@+id/example_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="256dp"
        android:layout_marginTop="32dp"
        android:baselineAligned="false"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_question">

        <TextView
            android:id="@+id/option_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@drawable/bg_tv_orange"
            android:fontFamily="@font/goldman_bold"
            android:paddingHorizontal="12dp"
            android:text="@string/_1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/option_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@drawable/bg_tv_orange"
            android:fontFamily="@font/goldman_bold"
            android:text="@string/_2"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/option_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@drawable/bg_tv_orange"
            android:fontFamily="@font/goldman_bold"
            android:text="@string/_3"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/option_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@drawable/bg_tv_orange"
            android:fontFamily="@font/goldman_bold"
            android:text="@string/_4"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/option_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@drawable/bg_tv_orange"
            android:fontFamily="@font/goldman_bold"
            android:paddingHorizontal="12dp"
            android:text="@string/_5"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/option_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@drawable/bg_tv_orange"
            android:fontFamily="@font/goldman_bold"
            android:text="@string/_6"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/option_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@drawable/bg_tv_orange"
            android:fontFamily="@font/goldman_bold"
            android:text="@string/_7"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/option_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@drawable/bg_tv_orange"
            android:fontFamily="@font/goldman_bold"
            android:text="@string/_8"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/option_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@drawable/bg_tv_orange"
            android:fontFamily="@font/goldman_bold"
            android:paddingHorizontal="12dp"
            android:text="@string/_9"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/option_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_tv_orange"
            android:fontFamily="@font/goldman_bold"
            android:text="@string/_10"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/team1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        android:layout_marginTop="390dp"
        android:background="@drawable/bg_tv_orange"
        android:fontFamily="@font/goldman_bold"
        android:padding="24dp"
        android:text="@string/team_1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/example_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/example_container" />

    <TextView
        android:id="@+id/team2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_tv_orange"
        android:fontFamily="@font/goldman_bold"
        android:padding="24dp"
        android:text="@string/team_2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/example_container"
        app:layout_constraintTop_toTopOf="@+id/example_container" />

    <TextView
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        android:background="@drawable/bg_tv_orange"
        android:fontFamily="@font/goldman_bold"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/reset_btn_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/btn_start_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@drawable/bg_tv_orange"
        android:fontFamily="@font/goldman_bold"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/start_timer"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@id/tv_number"
        app:layout_constraintBottom_toTopOf="@+id/tv_number"
        app:layout_constraintStart_toStartOf="@id/tv_number" />


    <TextView
        android:id="@+id/tv_number"
        android:layout_width="200dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="48dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_countdown"
        android:fontFamily="@font/goldman_bold"
        android:gravity="center"
        android:paddingTop="24dp"
        android:text="@string/_40"
        android:textColor="@color/white"
        android:textSize="0sp"
        app:autoSizeMaxTextSize="300sp"
        app:autoSizeMinTextSize="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintDimensionRatio="1:1" />


    <TextView
        android:id="@+id/tv_add_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="184dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/goldman_bold"
        android:text="@string/answer_activity_text_q_eleven"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_question" />


    <TextView
        android:id="@+id/end_of_time"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text=""
        android:background="@drawable/bg_tv_red"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>