<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_full_screen"
    tools:context=".AnswerQuestionSixActivity">

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="32dp"
        android:background="@drawable/bg_round_red"
        android:contentDescription="@string/close_img_button"
        android:src="@drawable/close_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btn_new_q"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bg_tv_orange"
        android:fontFamily="@font/goldman_bold"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/new_question_btn_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/current_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/goldman_bold"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/team_1" />

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/goldman_bold"
        android:text="@string/inte_plats_q6_1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_user" />


    <LinearLayout
        android:id="@+id/example_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:baselineAligned="false"
        android:layout_marginHorizontal="128dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_question">


            <TextView
                android:id="@+id/option_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:background="@drawable/bg_tv_orange"
                android:fontFamily="@font/goldman_bold"
                android:paddingHorizontal="12dp"
                android:text="@string/bitchfield"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/option_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:background="@drawable/bg_tv_orange"
                android:fontFamily="@font/goldman_bold"
                android:text="@string/arsefacey"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/option_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:background="@drawable/bg_tv_orange"
                android:fontFamily="@font/goldman_bold"
                android:text="@string/twatt"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/option_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_tv_orange"
                android:fontFamily="@font/goldman_bold"
                android:text="@string/brown_willy"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="32sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/btn_lock_in_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:padding="16dp"
        android:background="@drawable/bg_tv_orange"
        android:textAlignment="center"
        android:gravity="center"
        android:fontFamily="@font/goldman_bold"
        android:text="@string/btn_text_lock_in_answers"
        android:textColor="@color/white"
        android:textSize="@dimen/reset_btn_text_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selected_answer" />

    <TextView
        android:id="@+id/header_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/goldman_bold"
        android:text="@string/selected_header"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/example_container" />

    <TextView
        android:id="@+id/selected_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="128dp"
        android:background="@drawable/bg_tv_orange"
        android:fontFamily="@font/goldman_bold"
        android:text="@string/answer"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_selected"/>

</androidx.constraintlayout.widget.ConstraintLayout>