<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_full_screen"
    tools:context=".AnswerQuestionOneActivity">

    <TextView
        android:id="@+id/current_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/goldman_bold"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="TEAM 1" />

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/goldman_bold"
        android:text="@string/question_12"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_user" />

    <TextView
        android:id="@+id/tv_add_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/goldman_bold"
        android:text="@string/add_info_q_12"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_question"
        app:layout_constraintStart_toStartOf="@+id/tv_question"
        app:layout_constraintTop_toBottomOf="@+id/tv_question" />

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="32dp"
        android:background="@drawable/bg_round_red"
        android:contentDescription="@string/close_img_button"
        android:src="@drawable/close_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="16dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_info">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <include
                android:id="@+id/ticket1"
                layout="@layout/flight_ticket_item" />

            <include
                android:id="@+id/ticket3"
                layout="@layout/flight_ticket_item" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <include
                android:id="@+id/ticket2"
                layout="@layout/flight_ticket_item" />

            <include
                android:id="@+id/ticket4"
                layout="@layout/flight_ticket_item" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/btn_lock_in_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bg_tv_orange"
        android:fontFamily="@font/goldman_bold"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/btn_text_lock_in_answers"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/reset_btn_text_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container" />

</androidx.constraintlayout.widget.ConstraintLayout>